2001-09-18  Naba Kumar <kh_naba@users.sourceforge.net>

	* Applied patch from Luca.

2001-09-14  Naba Kumar <kh_naba@users.sourceforge.net>
	
	* anjuta.c, anjuta.h, main.c, main_menubar.c, main_menubar_def.h,
	mainmenu_callbacks.c, mainmenu_callbacks.h, messages.c:
	
	1) Restore the error color to red (waiting for a configurable one )
	2) Saving projects settings if you exit anjuta without closing an open
	saved project
	3) New Menu 'repaeat search' to search with a keystroke without pressing
	the toolbar button
	4) some define in the menus to better handle menu item update
	
	Patch from: lbell <lbell@tsc4.com>
	
	* main_menubar_def.h, main_menubar.c: Change the position of
	"Repeat find" menu position.

2001-09-13  Naba Kumar <kh_naba@users.sourceforge.net>

	 project_type.h, project_type.c, source.c: Applied patch.
	 patch from Johannes Schmid <clubfan@users.sourceforge.net>
	 
2001-09-12  Naba Kumar <kh_naba@users.sourceforge.net>

	* configure.in, src/Makefile.am: Using macros for ORBit flags.
	
2001-09-07 Johannes Schmid <clubfan@users.sourceforge.net>
	
	* Fixed bug #445752
  
2001-9-06  Johannes Schmid <clubfan@users.sourceforge.net>
	
	* Fixed bugs in Gtk-- and Gnome-- project type

2001-09-12  Naba Kumar <kh_naba@users.sourceforge.net>

	* dnd.c: Support for multiple files drag-n-drop.
	
	  Patch from: rikul <null@acm.org>
	
	* anjuta.c, anjuta.h, anjuta_cbs.c, main_menubar_def.h,
	  mainmenu_callbacks.c, mainmenu_callbacks.h: Added message text
	  saving from menu.
	
	  Patch from: rikul <null@acm.org>

	* Applied patch for widgetizing goto dialog box.
	  Patch from: ???
	
	* Applied patch for having new project type handling.
	  Patch from: Johannes Schmid <clubfan@users.sourceforge.net>
	  
2001-09-12  Naba Kumar <kh_naba@users.sourceforge.net>

	* Makefile.am, aneditor.cxx, aneditor.h, anjuta.c, anjuta.h,
	  anjuta_cbs.c, anjuta_gui.c, breakpoints.c, breakpoints.h,
	  debugger.c, debugger.h, find_in_files.c, find_in_files.h,